kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hetzner-auction-ui
  namespace: react-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hetzner-auction-ui
  template:
    metadata:
      labels:
        app: hetzner-auction-ui
    spec:
      containers:
      - name: hetzner-auction-ui
        image: hetzner-auction-ui:1.0.0
        imagePullPolicy: Never
        ports:
        - containerPort: 80
