kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hetzner-auction-ui
  namespace: hetzner-auction-ui
spec:
  selector:
    app: hetzner-auction-ui
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
