kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hetzner-auction-ui
  namespace: hetzner-auction-ui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: haui.matzradloff.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hetzner-auction-ui
            port:
              number: 80
